new post ssh_authorize.markdown
T-BD-1

Signed-off-by: Jeff-Duan <1191837698@qq.com>

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 image: ""
 
 # The shortname for your Disqus site to enable comments/您的Disqus网站简称
-disqus_shortname: 
+disqus_shortname:
 
 # Your Google Analytics tracking code
 google_analytics_tracking_id: ""
@@ -38,7 +38,7 @@ author:
 
 # The "read next" posts to recommend at the bottom of each post/帖子底部添加"可能喜欢的其他帖子"
 recommended_posts:
-  - url: '/blog/2019/03/23/opening/'
+  - url: "/blog/2019/03/23/opening/"
 
 # Extra Open Graph and Twitter Cards settings for social sharing
 
@@ -55,5 +55,6 @@ markdown: kramdown
 kramdown:
   input: GFM
   hard_wrap: false
+  syntax_highlighter: rouge
 gems:
   - jekyll-redirect-from
