--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,10 @@ nav:
     url: "/"
   - title: "Talks"
     url: "/talks"
+  - title: "Diaries"
+    url: "/pages/diaries"
   - title: "Downloads"
-    url: "/downloads"
+    url: "/pages/downloads"
   - title: "About"
     url: "/about"
 
