--- a/_data/events.yml
+++ b/_data/events.yml
@@ -2,5 +2,5 @@
   date: 2019-03-01
   location: CHINA, CN
   talks:
-    - url: https://Jeff-Duan.github.io
+    - url: /pages/blog/2023/03/21/reopening/
       title: "Test Create Talks"
