--- a/_data/notes.yml
+++ b/_data/notes.yml
@@ -17,3 +17,5 @@
       title: "告白"
     - url: /pages/live/2023-04-12/
       title: "迷失感重现了"
+    - url: /pages/live/2023-04-20/
+      title: "烟继续抽酒继续喝"
