--- a/_data/notes.yml
+++ b/_data/notes.yml
@@ -5,17 +5,19 @@
     - url: /pages/live/2023-03-01/
       title: "重拾"
 
-- name: "Love"
-  date: 2023-03-21
+- name: "Live"
+  date: 2023-03-01
   location: CHINA, CN
   talks:
     - url: /pages/live/2023-03-01/
-      title: "重拾"
+      title: "2023-03-01 重拾"
     - url: /pages/live/2023-03-10/
-      title: "回忆"
+      title: "2023-03-10 回忆"
     - url: /pages/live/2023-03-19/
-      title: "告白"
+      title: "2022-04-19 告白"
     - url: /pages/live/2023-04-12/
-      title: "迷失感重现了"
+      title: "2022-04-12 迷失感重现了"
     - url: /pages/live/2023-04-20/
-      title: "烟继续抽酒继续喝"
+      title: "2022-04-20 烟继续抽酒继续喝"
+    - url: /pages/live/2023-04-25/
+      title: "2022-04-25 在阿里22年的绩效"
